--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -12,6 +12,10 @@ categories:
       - 'bug'
   - title: '🧰 Maintenance'
     label: 'chore'
+  - title: '📄 Documentation'
+    labels:
+      - 'documentation'
+      - 'docs'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-template: "$MAJOR.$MINOR"
