--- a/.github/workflows/build-and-draft-release.yml
+++ b/.github/workflows/build-and-draft-release.yml
@@ -5,24 +5,13 @@ on:
     branches: [main]
     paths:
       - 'build/**'
+      - 'workbooks/**'
   pull_request:
     branches: [main]
     paths:
       - 'build/**'
+      - 'workbooks/**'
   workflow_dispatch:
-
-# on:
-#   push:
-#     # branches to consider in the event; optional, defaults to all
-#     branches:
-#       - main
-#     # pull_request event is required only for autolabeler
-#     pull_request:
-#       # Only following types are handled by the action, but one can default to all as well
-#       types: [opened, reopened, synchronize]
-#     # pull_request_target event is required for autolabeler to support PRs from forks
-#     pull_request_target:
-#       types: [opened, reopened, synchronize]
 
 permissions:
   contents: read
